# SystemIntegration2025

./: .gitignore  README.md
02._Text_based_data_formats/: me.csv
03._Modules/htmlEsmodules/: index.js  myModule.js
03._Modules/htmlclassic/: index.html  index.js
05._Python_Virtual_Enviroment/: main.py
06._Simple_Servers/node/: package-lock.json  package.json
08._Server-Server/01._node/: app.js
08._Server-Server/02._python/: main.py  pyproject.toml
09._Enviroment_Variables/02._python/: main.py  pyproject.toml
10._Date/02._python/: main.py
11._Short_Polling/01._node/: app.js  package-lock.json  package.json
12._Long_Polling/01._node/: app.js
13._Server-sent_events/01._node/: app.js
13._Server-sent_events/02._python/: pyproject.toml
14._WebSocket/01._node/: client.js  server.js
14._WebSocket/02._python_plain/: client.py  pyproject.toml
14._WebSocket/03._python_fastapi/: connection_manager.py  pyproject.toml
15._OpenAPI/01._node/: package-lock.json  package.json
18._Cors/01._node/: app.js  package-lock.json  package.json
18._Cors/02._python/: main.py  pyproject.toml
19._Multipart_Forms/: index.html
19._Multipart_Forms/01._node/: app.js
19._Multipart_Forms/02._python/: main.py  pyproject.toml
22._MPEG-DASH/: package.json
26._GraphQL/01._node_basic/: package.json
27._Web_Scraping_Web_Crawling/01._node/: index.html  index.js  package-lock.json  package.json
Python_Virtual_Enviroment/: pyproject.toml
Simple_Servers/node/: app.js
Text-based-data formats/: me.json  me.xml  me.yaml
modules/htmlEsmodules/: myModule.js
(+88 files in other folders)
