[project]
name = "02-python"
version = "0.1.0"
description = "Working with enviroment variables in python"
authors = [
    {name = "Nicolai Bo Kunkel",email = "nicolai@kunkel.dk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "02"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
